[gd_scene load_steps=11 format=2]

[ext_resource path="res://Inimigos/Bosses/Boss1.gd" type="Script" id=1]
[ext_resource path="res://Inimigos/Naves/HurtBox.gd" type="Script" id=2]
[ext_resource path="res://Inimigos/Naves/Stats_Ship.gd" type="Script" id=3]
[ext_resource path="res://Sprites/2.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="CircleShape2D" id=2]
radius = 28.4429

[sub_resource type="CapsuleShape2D" id=1]
radius = 33.0
height = 42.0

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CircleShape2D" id=5]

[node name="Boss1" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="CollisionBoss" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 0

[node name="CollisionBoss" type="CollisionShape2D" parent="CollisionBoss"]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="HurtBoxBoss" type="Area2D" parent="." groups=["enemies"]]
collision_layer = 8
collision_mask = 4
script = ExtResource( 2 )

[node name="HurtBoxCollision" type="CollisionShape2D" parent="HurtBoxBoss"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="Stats_Ship" type="Node2D" parent="."]
script = ExtResource( 3 )
max_health = 20

[node name="Moviment" type="CanvasLayer" parent="."]

[node name="Center" type="Position2D" parent="Moviment"]
position = Vector2( 321, 125 )

[node name="Center" type="Area2D" parent="Moviment/Center"]
collision_layer = 0
collision_mask = 32768

[node name="CollisionCenter" type="CollisionShape2D" parent="Moviment/Center/Center"]
shape = SubResource( 3 )

[node name="Left" type="Position2D" parent="Moviment"]
position = Vector2( 10, 110 )

[node name="Left" type="Area2D" parent="Moviment/Left"]
collision_layer = 0
collision_mask = 32768

[node name="CollisionLeft" type="CollisionShape2D" parent="Moviment/Left/Left"]
shape = SubResource( 4 )

[node name="Right" type="Position2D" parent="Moviment"]
position = Vector2( 630, 110 )

[node name="Right" type="Area2D" parent="Moviment/Right"]
collision_layer = 0
collision_mask = 32768

[node name="CollisionRight" type="CollisionShape2D" parent="Moviment/Right/Right"]
shape = SubResource( 5 )

[node name="Timer_Shot" type="Timer" parent="."]

[node name="Timer_Entrance" type="Timer" parent="."]

[connection signal="area_entered" from="HurtBoxBoss" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats_Ship" to="." method="_on_Stats_Ship_no_health"]
[connection signal="area_entered" from="Moviment/Center/Center" to="." method="_on_Center_area_entered"]
[connection signal="area_entered" from="Moviment/Left/Left" to="." method="_on_Left_area_entered"]
[connection signal="area_entered" from="Moviment/Right/Right" to="." method="_on_Right_area_entered"]
[connection signal="timeout" from="Timer_Shot" to="." method="_on_Timer_Shot_timeout"]
[connection signal="timeout" from="Timer_Entrance" to="." method="_on_Timer_Entrance_timeout"]
